add_subdirectory(AccumulatePass)
add_subdirectory(AOFlickerMask)
add_subdirectory(BinaryDilation)
add_subdirectory(BlitPass)
add_subdirectory(BSDFViewer)
add_subdirectory(CrossBilateralBlur)
add_subdirectory(DebugPasses)
add_subdirectory(DeferredLighting)
add_subdirectory(DeinterleaveTexture)
add_subdirectory(DepthPass)
add_subdirectory(DepthPeeling)
add_subdirectory(DLSSPass)
add_subdirectory(EnvMapPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(FLIPPass)
add_subdirectory(ForwardLighting)
add_subdirectory(GBuffer)
add_subdirectory(GuardBand)
add_subdirectory(ImageEquation)
add_subdirectory(ImageLoader)
add_subdirectory(LinearizeDepth)
add_subdirectory(MaterialDoubleSided)
add_subdirectory(MinimalPathTracer)
add_subdirectory(ModulateIllumination)
add_subdirectory(NRDPass)
add_subdirectory(OptixDenoiser)
add_subdirectory(PathTracer)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RayShadow)
add_subdirectory(RenderPassTemplate)
add_subdirectory(RTAO)
add_subdirectory(RTXDIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(SimplePostFX)
add_subdirectory(StochasticDepthMap)
add_subdirectory(StochasticDepthMapRT)
add_subdirectory(SVAO)
add_subdirectory(SVGFPass)
add_subdirectory(TAA)
add_subdirectory(TemporalAO)
add_subdirectory(TestPasses)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(VAO)
add_subdirectory(VarianceMap)
add_subdirectory(VarianceMapPreview)
add_subdirectory(WhittedRayTracer)
