add_subdirectory(AccumulatePass)
add_subdirectory(AOFlickerMask)
add_subdirectory(AOGuidedBlur)
add_subdirectory(AOVarianceFix)
add_subdirectory(BinaryDilation)
add_subdirectory(BlitPass)
add_subdirectory(BSDFViewer)
add_subdirectory(CompressNormals)
add_subdirectory(ConvolutionalNet)
add_subdirectory(CrossBilateralBlur)
add_subdirectory(DebugPasses)
add_subdirectory(DeferredLighting)
add_subdirectory(DeinterleaveTexture)
add_subdirectory(DepthPass)
add_subdirectory(DepthPeeling)
add_subdirectory(DepthPeelSinglePass)
add_subdirectory(DirectML)
add_subdirectory(DLSSPass)
add_subdirectory(EnvMapPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(FLIPPass)
add_subdirectory(ForwardLighting)
add_subdirectory(GBuffer)
add_subdirectory(GuardBand)
add_subdirectory(HBAO)
add_subdirectory(ImageEquation)
add_subdirectory(ImageLoader)
add_subdirectory(InterleaveTexture)
add_subdirectory(LinearizeDepth)
add_subdirectory(MaterialDoubleSided)
add_subdirectory(MinimalPathTracer)
add_subdirectory(ModulateIllumination)
add_subdirectory(NRDPass)
add_subdirectory(OptixDenoiser)
add_subdirectory(PathBenchmark)
add_subdirectory(PathRecorder)
add_subdirectory(PathTracer)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RayShadow)
add_subdirectory(ReconstructNormals)
add_subdirectory(RenderPassTemplate)
add_subdirectory(RTAO)
add_subdirectory(RTXDIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(SimplePostFX)
add_subdirectory(StochasticDepthMap)
add_subdirectory(StochasticDepthMapRT)
add_subdirectory(SVAO)
add_subdirectory(SVGFPass)
add_subdirectory(Switch)
add_subdirectory(TAA)
add_subdirectory(TemporalAO)
add_subdirectory(TemporalDepthPeel)
add_subdirectory(TestPasses)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(VAO)
add_subdirectory(VAOExport)
add_subdirectory(VarianceMap)
add_subdirectory(VarianceMapPreview)
add_subdirectory(VBufferLighting)
add_subdirectory(WhittedRayTracer)
add_subdirectory(ZMipmaps)
